updated copy and fixed spacing issues

--- a/css/agency.css
+++ b/css/agency.css
@@ -109,7 +109,7 @@ font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
 font-weight: 400;
 letter-spacing: 1px;
 color: #fff;
-padding: 35px;
+padding: 30px;
 }
 .navbar-default .nav li a:hover,
 .navbar-default .nav li a:focus {
@@ -203,7 +203,7 @@ font-weight: 400;
 }
 @media (min-width:768px) {
 section {
-padding: 150px 0;
+padding: 100px 0;
 }
 
 
